# QT-Basalt

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
control/recipes/: corrosion_resistant.yaml  electrical_insulation.yaml  high_temperature.yaml  precision_structural.yaml  structural.yaml
qutlas/: __init__.py  cli.py  schema.py
qutlas/control/: __init__.py  controller.py  recipe_loader.py  safety.py  types.py
qutlas/dashboard/: __init__.py  operator.py
qutlas/data_pipeline/: __init__.py  export.py  ingestion.py  pipeline.py  ring_buffer.py  sync.py
qutlas/models/: __init__.py  engine.py  features.py  fiber_draw.py  furnace.py  predictor.py  training.py  viscosity.py
qutlas/platform_api/: __init__.py  app.py
qutlas/simulation/: process.py  runner.py
scripts/: generate_dataset.py  run_dashboard.py  run_mvp.py
tests/integration/: test_end_to_end.py
tests/unit/: test_control.py  test_engine.py  test_physics.py  test_pipeline.py  test_schema.py
