[project]
name = "qutlas"
version = "0.1.0"
description = "Programmable materials manufacturing infrastructure"
requires-python = ">=3.11"

dependencies = [
    # Data processing
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "pyarrow>=15.0",
    # ML and modeling
    "torch==2.2.2",
    "scikit-learn>=1.4",
    "mlflow>=2.11",
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "pydantic>=2.6",
    # Dashboard
    "httpx>=0.27",
    "rich>=13.7",
    "typer>=0.12",
    # Utilities
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
]

[project.scripts]
qutlas = "qutlas.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=qutlas --cov-report=term-missing"

[tool.coverage.run]
source = ["qutlas"]
omit = ["tests/*", "**/__init__.py"]
